fixed overflow issue, removed the hr that i no longed liked, and re worded the last question to work with people who are not in school

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -31,7 +31,8 @@ html, body, .container {
   height: 100%;
   width: 100%;
   font-family: Helvetica, Arial, 'sans-serif';
-  overflow: hidden;
+  background-color: #054958;
+//  overflow: hidden;
 }
 
 .container {
